Прошёлся немного SonarLint-ом по backend